# oscarlytics

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILLS.md  all_content.json  dump_all.py  generate_yaml.py  implementation_plan.md  pyproject.toml  read_excel.py  xl.json
apps/portfolio/: Containerfile.app  config.py  entrypoint.py  entrypoint.sh  fix_db.py  init_content.py  insert_data.py  portfolio.py  pyproject.toml  sync_projects.py
apps/portfolio/content/: content.yaml
apps/portfolio/content/projects/: 2022-11-25-en-one-story-about-life-expectancy.md  2022-11-25-es-una-historia-sobre-esperanza-de-vida.md  2022-12-17-en-lyrics.md  2022-12-17-es-lyrics.md  2023-03-11-en-ihrepo.md  2023-03-11-es-ihrepo.md  2023-12-27-en-portfolio.md  2023-12-27-es-portafolio.md  2026-03-01-en-web_content_management.md  2026-03-01-es-gestion-contenido-en-web.md  2026-06-02-en-portfolio_2_0.md  2026-06-02-es-portafolio_2_0.md
apps/portfolio/portfolio/: __init__.py  content.xlsx  models.py  routes.py  search.py
apps/portfolio/portfolio/static/css/: style.css
apps/portfolio/portfolio/templates/: base.html  login.html  sitemap.xml
examples/projects/: 2024-01-01-en-example-project.md  2024-01-01-es-proyecto-ejemplo.md
infra/: Containerfile.acmesh  Containerfile.meilisearch  Containerfile.nginx  env.example  nginx.conf  portfolio.kube  portfolio.network  portfolio.yaml  portfolio_certs.volume  portfolio_db.volume  portfolio_meilisearch.volume  portfolio_storage.volume
scripts/: build_and_push.sh  deploy_prod.sh  rebuild_app.sh  setup.sh
(+8 files in other folders)
